Create wallet GET

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,11 +11,12 @@
 
       <% if(!user){ %>
 
-        <li><a class="login"href="/signup">signup</a></li>
-        <li><a class="login"href="/login"> login</a></li>
+        <li><a class="login" href="/signup">signup</a></li>
+        <li><a class="login" href="/login"> login</a></li>
 
       <% }else{ %>
-        <li><a class="login"href="/logout">logout</a></li>
+        <li><a class="login" href="/logout">logout</a></li>
+        <li><a class="" href="/wallet/new">create wallet</a></li>
 
       <% } %>
     </nav>
