login waiting for manuel signup

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,7 +1,7 @@
 <form action="/login" method="POST">
   <div class="field">
-    <label for="username">username:</label><br><br>
-    <input class="boxtext" type="text" name="username">
+    <label for="dniNumber">DNI:</label><br><br>
+    <input class="boxtext" type="text" name="dniNumber">
   </div>
   <div class="field">
     <label for="password">password:</label><br><br>
