guarda en base de datos

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,6 @@
 
     <%- body -%>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="javascripts/main.js"></script>
+    <!-- <script src="javausscripts/main.js"></script> -->
   </body>
 </html>
