sign up already uploads pictures, returns undefined when uploading various pictures

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,4 @@
-<form action="/signup" method="post" id="form-container">
+<form action="/signup" method="post" id="form-container" enctype="multipart/form-data">
   <div class="field">
     <label for="firstname">First Name: </label>
     <input id="firstname" type="text" name="firstname" placeholder="First Name">
@@ -15,14 +15,14 @@
     <label for="dniNumber">DNI: </label>
     <input id="dniNumber" type="text" name="username" placeholder="DNI Number">
   </div>
-  <!-- <div class="field">
+  <div class="field">
     <label for="dniFront">DNI Front Photo: </label>
     <input id="dniFront" type="file" name="dniFront">
   </div>
   <div class="field">
     <label for="dniBack">DNI Back Photo: </label>
     <input id="dniBack" type="file" name="dniBack">
-  </div> -->
+  </div>
   <div class="field">
     <label for="phoneNumber">Phone Number: </label>
     <input id="phoneNumber" type="text" name="phoneNumber" placeholder="Phone Number">
