--- a/views/wallets/new.ejs
+++ b/views/wallets/new.ejs
@@ -1,20 +1,8 @@
-<form action="/wallet/new" method="post">
-  <div class="form-group">
-    <label for="cardNumber">Card Number: </label>
-    <input id="cardNumber" class="form-control" type="number" name="cardNumber" maxlength="16" min="0" required>
-  </div>
-  <div class="form-group">
-    <label for="cvv">CVV: </label>
-    <input id="cvv" class="form-control" type="number" name="cvv" maxlength="3" min="0" required>
-  </div>
-  <div class="form-group">
-    <label for="expiredDate">Expired Date: </label>
-    <input id="expiredDate" class="form-control" type="date" name="expiredDate" required>
-  </div>
-  <div class="form-group">
-    <label for="quantity">Quantity in $: </label>
-    <input id="quantity" class="form-control" type="number" name="quantity" step="0.01" min="0" required>
-  </div>
-  
-  <button>Create Wallet</button>
-</form>
+<% if(!user.cardNumber){ %>
+<h1>To create a wallet, you need money first</h1>
+ <%- include("../users/addMoneyToAccount") %>
+
+<% }else{ %>
+
+
+<% } %>
