--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <p>HOME!</p>
 
 <% if(user.dniNumber) { %>
-  <h2>Hola usuario <%= user.username %></h2>
+  <h2>Hola usuario <%= user.firstname %></h2>
   <form action="/logout" method="POST">
     <button>Logout</button>
   </form>
