corrected undefined photos in signup

--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -39,15 +39,15 @@
     <input id="password" type="password" name="password" placeholder="Your password" value="<% user.password%>">
   </div>
   <div class="field">
-    <label for="cardNumber">Password: </label>
+    <label for="cardNumber">Card Number: </label>
     <input id="cardNumber" type="text" name="cardNumber" placeholder="Your card number" value="<% user.cardNumber%>">
   </div>
   <div class="field">
-    <label for="cardCCV">Password: </label>
+    <label for="cardCCV">CVV: </label>
     <input id="cardCCV" type="text" name="cardCCV" placeholder="Your CVV" value="<% user.cardCCV%>">
   </div>
   <div class="field">
-    <label for="cardExpiredDate">Password: </label>
+    <label for="cardExpiredDate">Card Expiry Date: </label>
     <input id="cardExpiredDate" type="text" name="cardExpiredDate" placeholder="Expiry Date" value="<% user.cardExpiredDate%>">
   </div>
   <button type="submit">Update User</button>
