--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,8 +3,8 @@
 
 <p>HOME!</p>
 
-<% if(user.username) { %>
-  <h2>Hola usuario <%= user.username %></h2>
+<% if(user) { %>
+  <h2>Hola usuario <%= user.firstname %></h2>
   <form action="/logout" method="POST">
     <button>Logout</button>
   </form>
