Select currency and show it value in GDAX using the API and ajax

--- a/views/wallets/new.ejs
+++ b/views/wallets/new.ejs
@@ -5,5 +5,17 @@
 <% }else{ %>
 
 <h1>YA TIENE WALLET</h1>
+<div class="field">
+  <label for="select-currency">Select currency: </label>
+  <select id='select-currency'>
+    <option disabled selected value> -- select an option -- </option>
+    <option value="BTC-USD">BTC</option>
+  </select>
+</div>
+
+<div id='market-values'class="field">
+
+</div>
+
 
 <% } %>
