--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,7 @@
 
     <%- body -%>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <!-- <script src="javausscripts/main.js"></script> -->
+    <script src="/javascript/GDAXHandler.js"></script>
+    <script src="/javascript/main.js"></script>
   </body>
 </html>
