--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,6 +24,7 @@
     <%- body -%>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="/javascript/GDAXHandler.js"></script>
+    <script src="/javascript/BitfinexHandler.js"></script>
     <script src="/javascript/main.js"></script>
   </body>
 </html>
