--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,5 @@
 <!--user home-->
 
-
 <p>HOME!</p>
 
 <% if(user) { %>
@@ -8,7 +7,8 @@
   <form action="/logout" method="POST">
     <button>Logout</button>
     <a href="/">Create-Wallet</a>
-    <a href="/">Edit-Profile</a>
+    <a href="/users/edit">Edit-Profile</a>
+    <a href="/wallet/show">show-wallet</a>
   </form>
   <% }else{ %>
     <div class="error-message">
