delete card(no wallet) done pending change all the wallet for card

--- a/views/wallets/show.ejs
+++ b/views/wallets/show.ejs
@@ -4,3 +4,4 @@
 <h3><%= user.money %></h3>
 <p><b>available: </b><%= user.money %></p>
 <a href="/wallet/edit">EDIT-WALLET</a>
+<a href="/wallet/delete">DELETE-WALLET</a>
