chande wallet for card to my friend manuelillo

--- a/views/card.ejs/edit-card.ejs
+++ b/views/card.ejs/edit-card.ejs
@@ -1,5 +1,5 @@
 <h2>EDIT-WALLET</h2>
-<form action="/wallet/edit" method="post">
+<form action="/card/edit" method="post">
   <div class="form-group">
     <label for="cardNumber">Card Number: </label>
     <input id="cardNumber" class="form-control" type="number" name="cardNumber" maxlength="16" min="0" value="<%= user.cardNumber %>" required>
