for my friend manuelillo change wallet for card ,wallet empty

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
     <button>Logout</button>
     <a href="/">Create-Wallet</a>
     <a href="/users/edit">Edit-Profile</a>
-    <a href="/wallet/show">show-wallet</a>
+    <a href="/card/show">show-wallet</a>
     <a href="/users/userinfo">Show User</a>
   </form>
 
