Show the cheapest option to buy BTC

--- a/views/wallets/new.ejs
+++ b/views/wallets/new.ejs
@@ -14,8 +14,9 @@
 </div>
 
 <div id='market-values'class="field">
-
 </div>
 
-
+<div id='market-values-btns'class="field">
+  <button id="init-arbitrage" hidden></button>
+</div>
 <% } %>
