--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,10 +6,11 @@
   <h2>Hola usuario <%= user.firstname %></h2>
   <form action="/logout" method="POST">
     <button>Logout</button>
-    <a href="/">Create-Wallet</a>
+    <a href="/wallets/create">Create Wallet</a>
     <a href="/users/edit">Edit-Profile</a>
     <a href="/card/show">show-wallet</a>
     <a href="/users/userinfo">Show User</a>
+
   </form>
 
   <% }else{ %>
