final card routes done

--- a/views/card/edit-card.ejs
+++ b/views/card/edit-card.ejs
@@ -1,4 +1,4 @@
-<h2>EDIT-WALLET</h2>
+<h2>EDIT-CARD</h2>
 <form action="/card/edit" method="post">
   <div class="form-group">
     <label for="cardNumber">Card Number: </label>
