--- a/views/card/new.ejs
+++ b/views/card/new.ejs
@@ -4,7 +4,7 @@
 
 <% }else{ %>
 
-<h1>YA TIENE WALLET</h1>
+<h1>YA TIENE CARD</h1>
 <div class="field">
   <label for="select-currency">Select currency: </label>
   <select id='select-currency'>
