--- a/views/card/show.ejs
+++ b/views/card/show.ejs
@@ -1,7 +1,7 @@
-<h1>MY WALLET</h1>
+<h1>MY ACCOUNT</h1>
 <h2>THERE ARE MY FUCKING MONEY</h2>
 
 <h3><%= user.money %></h3>
 <p><b>available: </b><%= user.money %></p>
-<a href="/card/edit">EDIT-WALLET</a>
-<a href="/card/delete">DELETE-WALLET</a>
+<a href="/card/edit">EDIT-CARD</a>
+<a href="/card/delete">DELETE-CARD</a>
