--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,7 +16,7 @@
 
       <% }else{ %>
         <li><a class="login" href="/logout">logout</a></li>
-        <li><a class="" href="/card/new">create wallet</a></li>
+        <li><a class="" href="/card/new">add money with card</a></li>
 
       <% } %>
     </nav>
