--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,6 +16,7 @@
 
       <% }else{ %>
         <li><a class="login" href="/logout">logout</a></li>
+        <li><a href="/wallets/init-arbitrage">Init arbitrage</a></li>
 
       <% } %>
     </nav>
