wallet create finished, it displays created wallets in mywallets page

--- a/views/wallets/show.ejs
+++ b/views/wallets/show.ejs
@@ -1,6 +1,10 @@
 
+<h1><%= title %></h1>
+
+<% wallets.forEach((wallet) => { %>
+<h2> <%= wallet.exchangeSite %></h2>
 
 
-<h1>MY WALLETS</h1>
+  <h3><%= wallet.currency %></h3>
 
-<h3></h3>
+  <%  }) %>
