--- a/views/users/showuser.ejs
+++ b/views/users/showuser.ejs
@@ -4,6 +4,7 @@
 <li><%= user.address %></li>
 <li><%= user.dniNumber %></li>
 <li><%= user.email %></li>
+<li><%= user.inArbitrage %></li>
 
 <a href="/users/edit">Edit User</a>
 <a href="/users/delete">Delete User</a>
