user linked with card

--- a/views/card/show.ejs
+++ b/views/card/show.ejs
@@ -5,3 +5,4 @@
 <p><b>available: </b><%= user.money %></p>
 <a href="/card/edit-card">EDIT-CARD</a>
 <a href="/card/delete">DELETE-CARD</a>
+<a href="/users/home">GO-HOME</a>
