nothing to commit since last commit

--- a/views/card/show.ejs
+++ b/views/card/show.ejs
@@ -1,8 +1,7 @@
-<h1>MY ACCOUNT</h1>
-<h2>THERE ARE MY FUCKING MONEY</h2>
+<h1>AVAILABLE MONEY</h1>
 
 <h3><%= user.money %></h3>
 <p><b>available: </b><%= user.money %></p>
-<a href="/card/edit-card">EDIT-CARD</a>
-<a href="/card/delete">DELETE-CARD</a>
-<a href="/users/home">GO-HOME</a>
+<a href="/card/edit-card">INTRODUCE CARD</a>
+<a href="/card/delete">DELETE CARD</a>
+<a href="/users/home">GO HOME</a>
