--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav>
-      <a class="logo" href="/">BASIC BOILDERPLATE INDEX</a>
+      <a class="logo" href="/">BIT BOT</a>
 
       <% if(!user){ %>
 
