adding Bitstamp api pending, added bootstrap CDN

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -18,7 +18,7 @@
   <div class="check-login">
     <p class="account-message">
       You do not have an account?
-      <a class="click" href="/signup">Create</a>
+      <a class="click" href="/signup">Sign up here</a>
     </p>
   </div>
 </form>
