--- a/views/card/edit-card.ejs
+++ b/views/card/edit-card.ejs
@@ -1,4 +1,4 @@
-<h2>EDIT-CARD</h2>
+<h2>EDIT CARD DETAILS</h2>
 <form action="/card/edit-card" method="post">
   <div class="form-group">
     <label for="cardNumber">Card Number: </label>
@@ -16,5 +16,5 @@
     <label for="quantity">Quantity in $: </label>
     <input id="quantity" class="form-control" type="number" name="quantity" step="0.01" min="0" value="<%= user.money %>" required>
   </div>
-  <button>EDIT</button>
+  <button>Submit Changes</button>
 </form>
