--- a/views/card/new.ejs
+++ b/views/card/new.ejs
@@ -4,7 +4,7 @@
 
 <% }else{ %>
 
-<h1>YA TIENE CARD</h1>
+<h1>LETS MAKE MONEY</h1>
 <div class="field">
   <label for="select-currency">Select currency: </label>
   <select id='select-currency'>
@@ -18,5 +18,6 @@
 
 <div id='market-values-btns'class="field">
   <button id="init-arbitrage" hidden></button>
+  <button id="stop-arbitrage" hidden></button>
 </div>
 <% } %>
