--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,7 +17,7 @@
       <% }else{ %>
         <li><a class="login" href="/logout">logout</a></li>
         <li><a href="/users/init-arbitrage">Init arbitrage</a></li>
-        <li><a class="" href="/card/new">add money with card</a></li>
+        <li><a class="" href="/card/new">Deposit money</a></li>
       <% } %>
     </nav>
 
@@ -26,5 +26,7 @@
     <script src="/javascript/GDAXHandler.js"></script>
     <script src="/javascript/BitfinexHandler.js"></script>
     <script src="/javascript/main.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   </body>
 </html>
