--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,10 +7,9 @@
   </head>
   <body>
     <nav>
-      <a class="logo" href="/">BASIC BOILDERPLATE INDEX</a>
+      <a class="logo" href="/">Go to index</a>
 
       <% if(!user){ %>
-
         <li><a class="login" href="/signup">signup</a></li>
         <li><a class="login" href="/login"> login</a></li>
 
