--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,24 +1,30 @@
-<form action="/login" method="POST">
-  <div class="field">
-    <label for="dniNumber">DNI:</label><br><br>
-    <input class="boxtext" type="text" name="username">
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 centered-form">
+      <form action="/login" method="POST">
+        <div class="form-group">
+          <label for="dniNumber">DNI:</label>
+          <input class="form-control" type="text" name="username">
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input class="form-control" type="password" name="password">
+        </div>
+        <% if (typeof message != "undefined") { %>
+        <div class="error-message">
+          <%= message %>
+        </div>
+        <% } %>
+        <div id="create">
+          <input class="btn btn-success" type="submit" value="Log In">
+        </div>
+        <div class="check-login">
+          <p class="account-message">
+            You do not have an account?
+            <a class="click" href="/signup">Sign up here</a>
+          </p>
+        </div>
+      </form>
+    </div>
   </div>
-  <div class="field">
-    <label for="password">password:</label><br><br>
-    <input class="boxtext" type="password" name="password">
-  </div>
-  <% if (typeof message != "undefined") { %>
-  <div class="error-message">
-    <%= message %>
-  </div>
-  <% } %>
-  <div id="create">
-    <input type="submit" value="Log In">
-  </div>
-  <div class="check-login">
-    <p class="account-message">
-      You do not have an account?
-      <a class="click" href="/signup">Sign up here</a>
-    </p>
-  </div>
-</form>
+</div>
