--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
@@ -17,6 +18,7 @@
       <% }else{ %>
         <li><a class="login" href="/logout">logout</a></li>
         <li><a href="/users/init-arbitrage">Init arbitrage</a></li>
+        <li><a href="/users/init-arbitrage">Stop arbitrage</a></li>
         <li><a class="" href="/card/new">Deposit money</a></li>
       <% } %>
     </nav>
