--- a/views/wallets/new.ejs
+++ b/views/wallets/new.ejs
@@ -18,5 +18,6 @@
 
 <div id='market-values-btns'class="field">
   <button id="init-arbitrage" hidden></button>
+  <button id="stop-arbitrage" hidden></button>
 </div>
 <% } %>
