--- a/views/wallets/new.ejs
+++ b/views/wallets/new.ejs
@@ -18,6 +18,6 @@
 
 <div id='market-values-btns' class="field">
   <button id="init-arbitrage" hidden></button>
-  <button id="stop-arbitrage" hidden></button>
+  <button id="stop-arbitrage">stop-arbritage</button>
 </div>
 <% } %>
