create wallet button does not appear if user has wallets

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,9 @@
   <form action="/logout" method="POST">
 
     <a href="/card/show">Add Money to Account</a>
+<% if(wallet == undefined) { %>
     <a href="/wallets/create">Create Wallet</a>
+<% } %>
     <a href="/users/edit">Edit Profile</a>
     <a href="/users/userinfo">Show User</a>
     <button>Logout</button>
