--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,4 +1,4 @@
-<h2><%= title %></h2>
+<!-- <h2><%= title %></h2>
 <form action="/users/edit" method="POST">
   <div class="field">
     <label for="firstname">First Name: </label>
@@ -38,17 +38,86 @@
     <label for="password">Password: </label>
     <input id="password" type="password" name="password" placeholder="Your password" value="<%= user.password%>">
   </div>
-  <!-- <div class="field">
-    <label for="cardNumber">Card Number: </label>
-    <input id="cardNumber" type="text" name="cardNumber" placeholder="Your card number" value="<%= user.cardNumber%>">
-  </div>
-  <div class="field">
-    <label for="cardCCV">CVV: </label>
-    <input id="cardCCV" type="text" name="cardCCV" placeholder="Your CVV" value="<%= user.cardCVV%>">
-  </div>
-  <div class="field">
-    <label for="cardExpiredDate">Card Expiry Date: </label>
-    <input id="cardExpiredDate" type="text" name="cardExpiredDate" placeholder="Expiry Date" value="<%= user.cardExpiredDate%>">
-  </div> -->
   <button type="submit">Update User</button>
+</form> -->
+
+<form action="/users/edit" method="POST">
+<div class="form-group row">
+  <label for="firstname" class="col-2 col-form-label"></label>
+  <div class="col-10">
+    <input class="form-control" type="text" id="firstname" name ="firstname" placeholder="First Name" value="<%= user.firstname%>">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-search-input" class="col-2 col-form-label">Search</label>
+  <div class="col-10">
+    <input class="form-control" type="text" value="<%= user.lastname%>" id="example-search-input" name ="">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-email-input" class="col-2 col-form-label">Email</label>
+  <div class="col-10">
+    <input class="form-control" type="email" value="bootstrap@example.com" id="example-email-input">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-url-input" class="col-2 col-form-label">URL</label>
+  <div class="col-10">
+    <input class="form-control" type="url" value="https://getbootstrap.com" id="example-url-input">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-tel-input" class="col-2 col-form-label">Telephone</label>
+  <div class="col-10">
+    <input class="form-control" type="tel" value="1-(555)-555-5555" id="example-tel-input">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-password-input" class="col-2 col-form-label">Password</label>
+  <div class="col-10">
+    <input class="form-control" type="password" value="hunter2" id="example-password-input">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-number-input" class="col-2 col-form-label">Number</label>
+  <div class="col-10">
+    <input class="form-control" type="number" value="42" id="example-number-input">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-datetime-local-input" class="col-2 col-form-label">Date and time</label>
+  <div class="col-10">
+    <input class="form-control" type="datetime-local" value="2011-08-19T13:45:00" id="example-datetime-local-input">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-date-input" class="col-2 col-form-label">Date</label>
+  <div class="col-10">
+    <input class="form-control" type="date" value="2011-08-19" id="example-date-input">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-month-input" class="col-2 col-form-label">Month</label>
+  <div class="col-10">
+    <input class="form-control" type="month" value="2011-08" id="example-month-input">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-week-input" class="col-2 col-form-label">Week</label>
+  <div class="col-10">
+    <input class="form-control" type="week" value="2011-W33" id="example-week-input">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-time-input" class="col-2 col-form-label">Time</label>
+  <div class="col-10">
+    <input class="form-control" type="time" value="13:45:00" id="example-time-input">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="example-color-input" class="col-2 col-form-label">Color</label>
+  <div class="col-10">
+    <input class="form-control" type="color" value="#563d7c" id="example-color-input">
+  </div>
+</div>
 </form>
