bootstrap home page index

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,3 +10,13 @@ a {
 .message {
   color: red;
 }
+
+.card{
+
+  background-color: black;
+}
+
+.content{
+  height: 700px;
+  background-color: grey;
+}
