--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,32 @@
-<h2>Welcome to PaoloMYex</h2>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/home" img src ="./public/stylesheets/img/bitbot.png">LOGO</a>
+    </div>
+    <form action="/logout" method="POST">
+      <ul class="nav navbar-nav">
+        <li><a href="/card/show">Add Money to Account</a></li>
+
+        <li><a href="/wallets/create">Create Wallet</a></li>
+
+        <li><a href="/users/edit">Edit Profile</a></li>
+        <li><a href="/users/userinfo">Show User</a></li>
+      </ul>
+      <button class="btn btn-danger navbar-btn" href="/home">LOGOUT</button>
+    </form>
+  </div>
+</nav>
+
+<h2 class = "content">Welcome to PaoloMYex</h2>
+
+
+<div class="card">
+  <div class="card-header">
+    Featured
+  </div>
+  <div class="card-body">
+    <h4 class="card-title">Special title treatment</h4>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
