--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<!-- <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="/home" img src ="./public/stylesheets/img/bitbot.png">LOGO</a>
@@ -15,7 +15,7 @@
       <button class="btn btn-danger navbar-btn" href="/home">LOGOUT</button>
     </form>
   </div>
-</nav>
+</nav> -->
 
 <h2 class = "content">Welcome to PaoloMYex</h2>
 
