--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,20 +7,25 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
-    <nav>
-      <!-- <a class="logo" href="/">BIT BOT</a> -->
 
-      <% if(!user){ %>
-        <li><a class="login" href="/signup">signup</a></li>
-        <li><a class="login" href="/login"> login</a></li>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/home" img src ="./public/stylesheets/img/bitbot.png">LOGO</a>
+        </div>
+        <form action="/logout" method="POST">
+          <ul class="nav navbar-nav">
 
-      <% }else{ %>
-        <!-- <li><a class="login" href="/logout">logout</a></li>
-        <li><a href="/users/init-arbitrage">Init arbitrage</a></li>
-        <li><a href="/users/init-arbitrage">Stop arbitrage</a></li>
-        <li><a class="" href="/card/new">Deposit money</a></li> -->
-      <% } %>
+              <li><a class="login" href="/signup">signup</a></li>
+              <li><a class="login" href="/login"> login</a></li>
+            
+
+          </ul>
+          <button class="btn btn-danger navbar-btn" href="/home">LOGOUT</button>
+        </form>
+      </div>
     </nav>
+
 
     <%- body -%>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
