--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,4 @@
-<form action="/signup" method="post" id="form-container" enctype="multipart/form-data">
+<!-- <form action="/signup" method="post" id="form-container" enctype="multipart/form-data">
   <div class="field">
     <label for="firstname">First Name: </label>
     <input id="firstname" type="text" name="firstname" placeholder="First Name">
@@ -38,7 +38,7 @@
 
   <% if (typeof message !== "undefined") { %>
     <div class="error-message"><%= message %></div>
-  <% } %>
+  <% } %> -->
 
   <div id="create">
     <button>Create account</button>
@@ -50,4 +50,24 @@
       <a class="click" href="/login"> login</a>
     </p>
   </div>
+</form>
+
+
+<form>
+  <div class="form-group">
+    <label for="firstname">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-check">
+    <label class="form-check-label">
+      <input type="checkbox" class="form-check-input">
+      Check me out
+    </label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
