send to manuel vievws structure

--- a/views/wallets/new.ejs
+++ b/views/wallets/new.ejs
@@ -1,5 +1,5 @@
 <% if(!user.cardNumber){ %>
-<h1>To create a wallet, you need money first</h1>
+<h1>To start arbitrage, you need to add money to your account</h1>
  <%- include("../users/addMoneyToAccount") %>
 
 <% }else{ %>
