--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,4 @@
-<!-- <form action="/signup" method="post" id="form-container" enctype="multipart/form-data">
+<form action="/signup" method="post" id="form-container" enctype="multipart/form-data">
   <div class="field">
     <label for="firstname">First Name: </label>
     <input id="firstname" type="text" name="firstname" placeholder="First Name">
@@ -38,7 +38,7 @@
 
   <% if (typeof message !== "undefined") { %>
     <div class="error-message"><%= message %></div>
-  <% } %> -->
+  <% } %>
 
   <div id="create">
     <button>Create account</button>
@@ -53,7 +53,7 @@
 </form>
 
 
-<form>
+<!-- <form>
   <div class="form-group">
     <label for="firstname">Email address</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -70,4 +70,4 @@
     </label>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</form> -->
