--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,16 +1,15 @@
 <!--user home-->
 
 
-
-<% if(user) { %>
-  <!-- <form action="/logout" method="POST">
+<!--
+  <!  <form action="/logout" method="POST">
     <a class="btn btn-primary" href="/card/show">Add Money to Account</a>
     <a class="btn btn-primary" href="/wallets/create">Create Wallet</a>
     <a class="btn btn-primary" href="/users/edit">Edit Profile</a>
     <a class="btn btn-primary" href="/users/usersinfo">Show User</a>
     <button type="button" class="btn btn-outline-logout">LOGOUT</button>
   </form> -->
-  <nav class="navbar navbar-inverse">
+  <!-- <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="/home" img src="./public/stylesheets/img/bitbot.png">LOGO</a>
@@ -27,7 +26,10 @@
         <button class="btn btn-danger navbar-btn" href="/home">LOGOUT</button>
       </form>
     </div>
-  </nav>
+  </nav> -->
+
+
+  <% if(user) { %>
   <h2>Hola <%= user.firstname %></h2>
   <% }else{ %>
     <div class="error-message">
