--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,56 +1,66 @@
-<form action="/signup" method="post" id="form-container" enctype="multipart/form-data">
-  <div class="field">
-    <label for="firstname">First Name: </label>
-    <input id="firstname" type="text" name="firstname" placeholder="First Name">
-  </div>
-  <div class="field">
-    <label for="lastname">Last Name: </label>
-    <input id="lastname" type="text" name="lastname" placeholder="Last Name">
-  </div>
-  <div class="field">
-    <label for="address">Address: </label>
-    <input id="address" type="text" name="address" placeholder="Address">
-  </div>
-  <div class="field">
-    <label for="dniNumber">DNI: </label>
-    <input id="dniNumber" type="text" name="username" placeholder="DNI Number">
-  </div>
-  <div class="field">
-    <label for="dniFront">DNI Front Photo: </label>
-    <input id="dniFront" type="file" name="dniFront">
-  </div>
-  <div class="field">
-    <label for="dniBack">DNI Back Photo: </label>
-    <input id="dniBack" type="file" name="dniBack">
-  </div>
-  <div class="field">
-    <label for="phoneNumber">Phone Number: </label>
-    <input id="phoneNumber" type="text" name="phoneNumber" placeholder="Phone Number">
-  </div>
-  <div class="field">
-    <label for="mail">Email: </label>
-    <input id="mail" type="mail" name="email" placeholder="Mail">
-  </div>
-  <div class="field">
-    <label for="password">Password: </label>
-    <input id="password" type="password" name="password" placeholder="Your password">
-  </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 centered-form">
 
-  <% if (typeof message !== "undefined") { %>
-    <div class="error-message"><%= message %></div>
-  <% } %>
+      <form action="/signup" method="post" id="form-container" enctype="multipart/form-data">
+        <div class="field form-group">
+          <label for="firstname">First Name: </label>
+          <input class = "form-control" id="firstname" type="text" name="firstname" placeholder="First Name">
+        </div>
+        <div class="field form-group">
+          <label for="lastname">Last Name: </label>
+          <input class = "form-control" id="lastname" type="text" name="lastname" placeholder="Last Name">
+        </div>
+        <div class="field form-group">
+          <label for="address">Address: </label>
+          <input class = "form-control" id="address" type="text" name="address" placeholder="Address">
+        </div>
+        <div class="field form-group">
+          <label for="dniNumber">DNI: </label>
+          <input class = "form-control" id="dniNumber" type="text" name="username" placeholder="DNI Number">
+        </div>
+        <div class="field form-group">
+          <label for="dniFront">DNI Front Photo: </label>
+          <input class = "form-control" id="dniFront" type="file" name="dniFront">
+        </div>
+        <div class="field form-group">
+          <label for="dniBack">DNI Back Photo: </label>
+          <input class = "form-control" id="dniBack" type="file" name="dniBack">
+        </div>
+        <div class="field form-group">
+          <label for="phoneNumber">Phone Number: </label>
+          <input class = "form-control" id="phoneNumber" type="text" name="phoneNumber" placeholder="Phone Number">
+        </div>
+        <div class="field form-group">
+          <label for="mail">Email: </label>
+          <input class = "form-control" id="mail" type="mail" name="email" placeholder="Mail">
+        </div>
+        <div class="field form-group">
+          <label for="password">Password: </label>
+          <input class = "form-control" id="password" type="password" name="password" placeholder="Your password">
+        </div>
 
-  <div id="create">
-    <button>Create account</button>
-  </div>
+        <% if (typeof message !== "undefined") { %>
+          <div class="error-message">
+            <%= message %>
+          </div>
+          <% } %>
 
-  <div class="check-login">
-    <p class="account-message">
-      do you already have an account?
-      <a class="click" href="/login"> login</a>
-    </p>
+            <div id="create">
+              <button>Create account</button>
+            </div>
+
+            <div class="check-login">
+              <p class="account-message">
+                do you already have an account?
+                <a class="click" href="/login"> login</a>
+              </p>
+            </div>
+      </form>
+    </div>
+
   </div>
-</form>
+</div>
 
 
 <!-- <form>
