--- a/views/users/operationsHistory.ejs
+++ b/views/users/operationsHistory.ejs
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-  <table class="table">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
         <th>Date</th>
@@ -11,7 +11,7 @@
     <tbody>
       <% trades.forEach( trade => {%>
       <tr>
-        <td><%= trade.created_at %></td>
+        <td><%= trade.created_at.toUTCString() %></td>
         <td><%= trade.exchangeOrigin %></td>
         <td><%= trade.exchangeDestination %></td>
         <td>$<%= trade.moneyIfStopsArbitrage %></td>
