--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/users/home" img src="./public/stylesheets/img/bitbot.png">LOGO</a>
+        <a class="navbar-brand" id = "icon" href="/users/home"></a>
       </div>
       <form action="/logout" method="POST">
         <ul class="nav navbar-nav">
@@ -45,6 +45,12 @@
 
 
   <%- body -%>
+
+<footer class="navbar-default navbar-fixed-bottom" id = "footerfix">
+  <div class="container-fluid">
+    <span>Winning!</span>
+  </div>
+</footer>
 
     <script src="/javascript/GDAXHandler.js"></script>
     <script src="/javascript/BitfinexHandler.js"></script>
