--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6 centered-form">
-      <form action="/users/edit" method="post" id="form-container" enctype="multipart/form-data">
+      <form action="/users/edit" method="post" id="form-container">
         <div class="form-group">
           <label for="firstname">First Name: </label>
           <input class="form-control" id="firstname" type="text" name="firstname" placeholder="First Name" value="<%= user.firstname%>">
