Mejora de la vista de show user

--- a/views/users/showuser.ejs
+++ b/views/users/showuser.ejs
@@ -1,9 +1,9 @@
-<h2>SHOW USERNAME</h2>
-<li><%= user.firstname %></li>
-<li><%= user.lastname %></li>
-<li><%= user.address %></li>
-<li><%= user.dniNumber %></li>
-<li><%= user.email %></li>
-<li><%= user.inArbitrage %></li>
+<h2>YOUR PROFILE</h2>
+<li><b>First Name: </b><%= user.firstname %></li>
+<li><b>Last Name: </b><%= user.lastname %></li>
+<li><b>Address: </b><%= user.address %></li>
+<li><b>DNI: </b><%= user.dniNumber %></li>
+<li><b>Email: </b><%= user.email %></li>
+<li><b>Include in Arbitrage: </b><%= user.inArbitrage %></li>
 
 <a href="/users/delete">Delete User</a>
