--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" id = "icon" href="/users/home"></a>
+        <a class="navbar-brand"  href="/users/home">home</a>
       </div>
       <form action="/logout" method="POST">
         <ul class="nav navbar-nav">
@@ -46,11 +46,14 @@
 
   <%- body -%>
 
-<footer class="navbar-default navbar-fixed-bottom" id = "footerfix">
-  <div class="container-fluid">
-    <span>Winning!</span>
+
+  <nav class="navbar navbar-default navbar-bottom" role="navigation">
+  <div class="container">
+    <h1>BIT-BOT</h1>
   </div>
-</footer>
+</nav>
+
+
 
     <script src="/javascript/GDAXHandler.js"></script>
     <script src="/javascript/BitfinexHandler.js"></script>
