--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-6 centered-form">
 
-      <form action="/users/edit" method="post" id="form-container" enctype="multipart/form-data">
+      <form action="/users/edit" method="post" id="form-container">
         <div class="field form-group">
           <label for="firstname">First Name: </label>
           <input class="form-control" id="firstname" type="text" name="firstname" placeholder="First Name" value="<%= user.firstname%>">
@@ -27,6 +27,22 @@
         <div class="field form-group">
           <label for="mail">Email: </label>
           <input class="form-control" id="mail" type="mail" name="email" placeholder="Mail" value="<%= user.email%>">
+        </div>
+        <div class="form-group">
+          <label for="cardNumber">Card Number: </label>
+          <input id="cardNumber" class="form-control" type="number" name="cardNumber" maxlength="16" min="0" value="<%= user.cardNumber %>" required>
+        </div>
+        <div class="form-group">
+          <label for="cvv">CVV: </label>
+          <input id="cvv" class="form-control" type="number" name="cvv" maxlength="3" min="0" value="<%= user.cardCVV %>" required>
+        </div>
+        <div class="form-group">
+          <label for="expiredDate">Expired Date: </label>
+          <input id="expiredDate" class="form-control" type="date" name="expiredDate" value="<%= user.cardExpiredDate %>" required>
+        </div>
+        <div class="form-group">
+          <label for="quantity">Quantity in $: </label>
+          <input id="quantity" class="form-control" type="number" name="quantity" step="0.01" min="0" value="<%= user.money %>" required>
         </div>
 
 
