--- a/views/wallets/show.ejs
+++ b/views/wallets/show.ejs
@@ -1,6 +1,13 @@
 
 
+
+
 <h1><%= title %></h1>
+
+
+
+  <h1>you haven't a wallet</h1>
+
 
 
 <% wallets.forEach((wallet) => { %>
@@ -9,4 +16,6 @@
   <h3><%= wallet.currency %></h3>
   <button class='delete-wallet' data-id-wallet='<%= wallet._id %>'>Borrar</button>
 </div>
+
+
   <%  }) %>
