--- a/views/wallets/new.ejs
+++ b/views/wallets/new.ejs
@@ -5,7 +5,7 @@
 <% }else{ %>
 
 <h1>LETS MAKE MONEY</h1>
-<div class="field">
+<div class="form-group">
   <label for="select-currency">Select currency: </label>
   <select id='select-currency'>
     <option disabled selected value> -- select an option -- </option>
@@ -18,6 +18,5 @@
 
 <div id='market-values-btns' class="field">
   <button id="init-arbitrage" hidden></button>
-  <button id="stop-arbitrage">stop-arbritage</button>
 </div>
 <% } %>
