Funciona el stop arbitrage

--- a/views/users/showuser.ejs
+++ b/views/users/showuser.ejs
@@ -5,6 +5,6 @@
 <li><b>DNI: </b><%= user.dniNumber %></li>
 <li><b>Email: </b><%= user.email %></li>
 <li><b>Include in Arbitrage: </b><%= user.inArbitrage %></li>
-<li><b>Available Money: </b><%= user.money %></li>
+<li><b>Available Money: </b><%= user.money %> <b>$</b></li>
 
 <a href="/users/delete">Delete User</a>
