--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-inverse">
+  <nav class=" navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand"  href="/users/home">home</a>
