--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
              <img src="img/bitbot1.png" alt="Smiley face" width="400" height="400" style="display:inline-block;margin-bottom:0px;">
              <h1 class="brand-heading">BitBot</h1>
              <p class="intro-text">Everything it touches turns to gold.
-               <br>Created by Yaiza.</p>
+               <br>Created by Yaiza, Paoloniex, Cripto Avello.</p>
              <a href="#about" class="btn btn-circle js-scroll-trigger">
                <i class="fa fa-angle-double-down animated"></i>
              </a>
